fix: readAvailableRecruits group's null value fix - null일때는 1번그룹, 즉 봉사가 되도록 생성함